Remove duplicate z-index rule to fix display of login notification.

--- a/jujugui/static/gui/src/app/components/notification/_notification.scss
+++ b/jujugui/static/gui/src/app/components/notification/_notification.scss
@@ -123,7 +123,6 @@ $sp-large: 2rem;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    z-index: 50;
 
     @media screen and (max-width: 960px) {
       width: 90%;
